Fixing logo truncating on smaller screens like iPhone 5

--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -13,7 +13,8 @@ header {
     color: #fff;
   }
   h1 {
-    width: 366px;
+    width: 100%;
+    max-width: 366px;
     min-height: 78px;
     margin: 0 auto 20px;
     text-indent: -9999px;
