--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -5872,7 +5872,8 @@ header {
   header h2, header h3, header h4 {
     color: #fff; }
   header h1 {
-    width: 366px;
+    width: 100%;
+    max-width: 366px;
     min-height: 78px;
     margin: 0 auto 20px;
     text-indent: -9999px;
